# ai4good_repo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE-CC-BY-4.0.md  README.md  bert.py  gen_dys_signal_plus.py  inference.py  main.py  play_random_sample.py  prep_common_voice_ar.py  pyproject.toml  requirements.txt  simple_player.py  test.py  train.py
app/: app.py  test.py
data/: Recording.m4a  agent_response.json
data/agent_convo/: 1a74e50e-1f37-44fc-a839-f5414219be6a.json  2e1ee951-be0e-4786-9169-5e55712877ee.json  3c881c74-dc5a-4059-a23c-0fc3a0761b4c.json  409d0f61-1ba8-4dda-84ff-0ef3b81da8fb.json  40cde4a3-8afc-4e78-8feb-c3a9dde68c37.json  4a3852f7-9b11-4caa-9ee2-944a2f2600a4.json  4c5ad6cc-64cb-4d91-ba54-51253cd1ef00.json  513567dd-ea5d-42d3-a8c9-e965e2469d51.json  514d2ff5-a477-4dc9-a6d8-789b5094227d.json  52ca42c3-2960-447d-bdfd-30f9cad777c5.json  5ab86394-60fb-43e0-a34f-6321bfc93f6b.json  5be36058-6412-4f20-acc8-9bdacfba1abe.json  60770ecd-fb00-4547-8b0f-4a52e75acd16.json  62065f08-aa3a-4859-90c5-dd76c292b28b.json  8ef5e24f-d0fb-4d8c-b3cd-09fccde158b0.json  a183e30b-b588-4210-b2a6-747b0420126a.json  b4f0dcbe-3b96-439b-a0b1-a011822f3eee.json  b5489879-bdf9-4bd3-86a5-61c4ca7d99e9.json  b9bd1adf-28e7-4867-bb4a-872860b5445a.json  b9e25cd4-846a-459a-9eb1-e9cf8ca85471.json  bf6ce777-5cc8-403a-a22a-d7165a800719.json  c52f4ebd-acd0-403a-8ee7-3fff73f5450f.json  d4f80b97-04ee-4105-a8a5-2b31a035ea26.json  e32061ad-f2e4-4af3-b4b6-2a66a2dc533f.json  e4546b0e-d469-461f-b35a-4668aca5b9ee.json  e47fd821-1617-4219-92a6-12e348ce2a06.json  (+4 more)
data/agent_prompts/: chatbot.md  (+1 more)
(+53 files in other folders)
