[project]
name = "ai4good"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "dotenv>=0.9.9",
    "espeak-phonemizer>=1.3.1",
    "flask>=3.1.2",
    "openai>=2.3.0",
    "phonemizer==3.2.1",
    "pip>=25.2",
]
